# airflow-providers-oraclethick

./: .gitignore  README.md  setup.cfg
src/airflow/providers/oraclethick/: provider.yaml
src/airflow/providers/oraclethick/hooks/: oraclethick.py
