[metadata]
name = airflow-providers-oraclethick
version = 0.0.1
author = Drazen Nezic
author_email = info@trialogic.hr
description = Thick driver initialization for oracledb Airflow hook
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/SVESoftware/airflow-providers-oraclethick
project_urls =
    Bug Tracker = https://github.com/SVESoftware/airflow-providers-oraclethick/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
python_requires = >=3.8
include_package_data = True

[options.package_data]
* = *.yaml